Fix regression apparently introduced by Bram's fix for #117118, if the analysis in #121337 is not completely off. Based on a patch by Kanniball <kanniball@zmail.pt>. Thanks.

BUG: 121337
CCMAIL: kanniball@zmail.pt
CCMAIL: bramschoenmakers@kde.nl

svn path=/branches/KDE/3.5/kdepim/; revision=513401