recipientspicker.cpp
@@ -365,6 +365,8 @@ void RecipientsPicker::initCollections()
   mAllRecipients->setTitle( i18n("All") );
   insertCollection( mAllRecipients );
 
+  insertAddressBook( mAddressBook );
+
   insertDistributionLists();
 
   insertRecentAddresses();
